# edmtn

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
cluster/: coupling_dist.sbatch  cutensornet_mpi.sbatch  cutensornet_multigpu.sbatch  cutensornet_sanity.sbatch  gaudin_scaling.sbatch  test_gpu_hpc.sbatch  track2_b0.sbatch  track2_sanity.sbatch
docs/: conf.py  cpu-vs-gpu-edm.md  gpu-scaling-benchmark.md  incremental-update-research.md  index.md  mkl-tbb-threading-layer.md  multi-gpu-cuquantum-design.md  phase0-replatform-decisions.md  recommended-config.md
docs/api/: backend.md  cumulants.md  driver.md  evolution.md  expansion.md  index.md  kernels.md  models.md  observables.md
docs/benchmarks/: cpu-vs-gpu-edm.md
docs/design/: multi-gpu-cuquantum-design.md  phase0-replatform-decisions.md
docs/developer/: architecture.md  index.md  testing.md
docs/getting-started/: installation.md  quickstart.md
examples/: adaptive_tiers_e2e.py  adaptive_tiers_hardcoded.py  benchmark_cpu_gpu.py  canon_alternatives_e2e.py  critical_L_and_scaling.py  cs_recovery.py  cs_recovery_poc.py  cutensornet_mpi_probe.py  cutensornet_multigpu.py  cutensornet_sanity.py  edm_incremental.py  gauge_sweep_probe.py  incremental_rotation_poc.py  projection_poc.py  quimb_fold_e2e.py  quimb_tn_feasibility.py  replatform_validation.py  reproduce_fig4.py  reproduce_fig6.py  retire_gpu_smoke.py  rotation_tracking_poc.py  track2_2d_assembler.py  track2_b0_probe.py  track2_cutensornet_sanity.py  uniform_rsvd_e2e.py  validate_subspace.py  zipup_fused_e2e.py
tests/: conftest.py
(+121 files in other folders)
